# Moin-Projects

./: LICENSE  README.md
API/Personalized Offer Engine/: app.py  mock_data.py  readme.md
API/Spending Habit Analyzer/: main.py  mock_data.py  readme.md
API/Subscription Management API/: app.py  config.py  models.py  readme.md
Analytics/python-projects/: walmart_analytics.py
Banking/Churn Prediction/: churn_prediction.py
Banking/Credit Risk Assessment/: credit_risk_assessment.py
Corporate/Ad-Click-Aggregator/: Cargo.toml  readme.md
Corporate/Ad-Click-Aggregator/src/: lib.rs  main.rs  models.rs
Corporate/Customer Churn Analysis/: churn_analysis.R  churn_analysis_report.Rmd  readme.md
Corporate/Customer Review & A\B Testing/: index.html  readme.md
Corporate/Interactive Marketing Portfolio/: index.html  readme.md
Corporate/K Means Cluster/: k_means_cluster.py
Corporate/Lead Management/: index.php  leads.php  readme.md  setup_database.php
Corporate/Marketing Data Analysis/: app.py  data_analyzer.py  readme.md  requirements.txt
Corporate/Marketing Data Pipeline/: go.mod  main.go  readme.md
Corporate/Marketing Lead Management/: lead.json
Corporate/RFM Analysis Customer Segmentation/: customer_segmentation.R  (+1 more)
Cybersecurity/: README.MD  README.md  crypto_sim.sh  keylogger.py  start_keylogger.sh  stop_keylogger.sh
Fun Projects/: personalised_meme.py
Marketing_Analytics/: mkt_analytics.ipynb  one_click_run.py
Personalized Client Email Dispatcher/: email_dispatcher.applescript
University/: readme.md
scripts/: advanced_language_detector.py
(+41 files in other folders)
